beside - add news, event and try to do svg-sprites, but unseccesfully

--- a/beside/index.html
+++ b/beside/index.html
@@ -217,8 +217,8 @@
           
           <section class="event__contacts">
               <h3 class="event__contacts-header">
-                  <span>КОНТАКТИ</span>Притулок Сіріус</h3>
-              <p>тел:</p>
+                  <span>КОНТАКТИ</span> Притулок Сіріус</h3>
+              <span>тел:</span>
               <a class="event__contacts-phone" href="067 123 45 67">067 123 45 67</a>
               <div class="event__contacts-socials">
                   <a href="#">facebook</a>
@@ -227,38 +227,38 @@
               <a class="event__contacts-anchor" href="www.dogcat.com.ua">www.dogcat.com.ua</a>
               <button class="event__contacts-btn" type="button">написати нам</button>
               <p class="event__contacts-adress">Україна, Київська область, село Федорівка</p>
-              <img src="#" alt="map">
-              <a class="event__contacnts-more">ПЕРЕГЛЯНУТИ ІНШІ ПРОЕКТИ ОРГАНІЗАЦІЇ</a>
+              <img class="event__contacts-img" src="img/event__map.jpg" alt="map">
+              <a class="event__contacts-more">ПЕРЕГЛЯНУТИ ІНШІ ПРОЕКТИ ОРГАНІЗАЦІЇ</a>
           </section>
       </section>
       
       <section class="latest-news">
           <div class="latest-news__inner">
-              <h3 class="latest-news__header"></h3>
+              <h3 class="latest-news__header">вас можуть зацікавити</h3>
               <div class="latest-news__items-container">
                   <a class="latest-news__item" href="#">
-                      <img src="" alt="news-photo">
-                      <span>Волонтерство вихідного дня</span>
+                      <img class="latest-news__item-img" src="img/news-img-1.jpg" alt="news-photo">
+                      <span class="latest-news__item-text">Волонтерство вихідного дня</span>
                   </a>
                   <a class="latest-news__item" href="#">
-                      <img src="" alt="news-photo">
-                      <span>Чапік шукає даму серця</span>
+                      <img class="latest-news__item-img" src="img/news-img-2.jpg" alt="news-photo">
+                      <span class="latest-news__item-text">Чапік шукає даму серця</span>
                   </a>
                   <a class="latest-news__item" href="#">
-                      <img src="" alt="news-photo">
-                      <span>Нам потрібен старий посуд та підстилки</span>
+                      <img class="latest-news__item-img" src="img/news-img-3.jpg" alt="news-photo">
+                      <span class="latest-news__item-text">Нам потрібен старий посуд та підстилки</span>
                   </a>
                   <a class="latest-news__item" href="#">
-                      <img src="" alt="news-photo">
-                      <span>Я Інжир і мені потрібен дім на тиждень</span>
+                      <img class="latest-news__item-img" src="img/news-img-4.jpg" alt="news-photo">
+                      <span class="latest-news__item-text">Я Інжир і мені потрібен дім на тиждень</span>
                   </a>
                   <a class="latest-news__item" href="#">
-                      <img src="" alt="news-photo">
-                      <span>Ми вже два місяці як готові дарувати Вам щастя</span>
+                      <img class="latest-news__item-img" src="img/news-img-5.jpg" alt="news-photo">
+                      <span class="latest-news__item-text">Ми вже два місяці як готові дарувати Вам щастя</span>
                   </a>
                   <a class="latest-news__item" href="#">
-                      <img src="" alt="news-photo">
-                      <span>Шукаємо сторожа в притулок</span>
+                      <img class="latest-news__item-img" src="img/news-img-6.jpg" alt="news-photo">
+                      <span class="latest-news__item-text">Шукаємо сторожа в притулок</span>
                   </a>
               </div>
           </div>
