beside - add working prototype of slider to welcome-screen

--- a/beside/index.html
+++ b/beside/index.html
@@ -56,7 +56,29 @@
           <div class="welcome-screen__inner">
               <h1 class="welcome-screen__header">НАЙБІЛЬША В УКРАЇНІ БІРЖА ДОБРА</h1>
               <p class="welcome-screen__sub-header">допомагати просто</p>
-              <div class="welcome-screen__slider-wrapper">slider</div>
+              
+              <div class="welcome-screen__slider-wrapper">
+                  <div class="welcome-slider">
+                      <ul class="welcome-slider__list">
+                          <span class="welcome-slider__item-target" id="target-1"></span>
+                          <span class="welcome-slider__item-target" id="target-2"></span>
+                          <span class="welcome-slider__item-target" id="target-3"></span>
+                          <li class="welcome-slider__item welcome-slider__item_first" id="welcome-slider__item-1">1
+                              <a class="welcome-slider__prev" href="#target-3">prev</a>
+                              <a class="welcome-slider__next" href="#target-2">next</a>
+                          </li>
+                          <li class="welcome-slider__item welcome-slider__item_second" id="welcome-slider__item-2">2
+                              <a class="welcome-slider__prev" href="#target-1">prev</a>
+                              <a class="welcome-slider__next" href="#target-3">next</a>
+                          </li>
+                          <li class="welcome-slider__item welcome-slider__item_third" id="welcome-slider__item-3">3
+                              <a class="welcome-slider__prev" href="#target-2">prev</a>
+                              <a class="welcome-slider__next" href="#target-1">next</a>
+                          </li>
+                      </ul>
+                  </div>
+              </div>
+              
               <button class="arrow-down" type="button">Притулки для тварин</button>
           </div>
       </section>
