beside - fix hover effects, done with png-sprite, fix header

--- a/beside/index.html
+++ b/beside/index.html
@@ -11,7 +11,9 @@
       
   <header class="page-header">
         <div class="page-header__inner">
-            <a class="page-header__logo" href="#">logo</a>
+            <a class="page-header__logo" href="#">
+                <img src="img/logo.png" alt="logotype">
+                logo</a>
 
             <div class="page-header__nav-wrapper">
 
@@ -47,7 +49,7 @@
             <div class="login-form">
 <!--         how to make heart? what is it?      -->
                 <button class="login-form__lang-switcher" type="button">Ук</button>
-                <button class="login-form__login-but" type="button">Увійти</button>
+                <button class="login-form__login-btn" type="button">Увійти</button>
             </div>
         </div>
     </header>
@@ -334,7 +336,9 @@
           </section>
           
           <section class="page-footer__copyright">
-              <a class="page-footer__logo" href="#">logo</a>
+              <a class="page-footer__logo" href="#">
+                  <img src="img/logo.png" alt="logotype">
+                  logo</a>
               <p class="page-footer__copyright-text">© 2017 Соціальні проекти ‘ПОРЯД’.<br>Всі права захищено.</p>
           </section>
       </div>
