beside - add positions with hover effect and real content

--- a/beside/index.html
+++ b/beside/index.html
@@ -174,40 +174,46 @@
           <h3 class="positions__header">ПРИТУЛКИ ДЛЯ ТВАРИН</h3>
           <div class="positions__container">
               <div class="positions__item">
-                  <img class="positions__item-img" src="" alt="position image">
-                  <span class="possitions__item-text">Збираємо кошти на харчування тварин<br> Притулок Сіріус</span>
+                  <img class="positions__item-img" src="img/positions-img-1.jpg" alt="position image">
+                  <span class="positions__item-text">Збираємо кошти на харчування тварин<br> Притулок Сіріус</span>
                   <span class="positions__item-text-additional">сума необмежена</span>
                   <a class="positions__item-anchor" href="#">Допомогти</a>
+                  <a class="positions__item-info">info</a>
               </div>
               <div class="positions__item">
-                  <img class="positions__item-img" src="" alt="position image">
-                  <span class="possitions__item-text">Необхідно провести вакцинацію собак <br>Притулок Сіріус</span>
-                  <span class="possitions__item-text-additional">сума необмежена</span>
+                  <img class="positions__item-img" src="img/positions-img-2.jpg" alt="position image">
+                  <span class="positions__item-text">Необхідно провести вакцинацію собак <br>Притулок Сіріус</span>
+                  <span class="positions__item-text-additional">сума необмежена</span>
                   <a class="positions__item-anchor" href="#">Допомогти</a>
+                  <a class="positions__item-info">info</a>
               </div>
               <div class="positions__item">
-                  <img class="positions__item-img" src="" alt="position image">
-                  <span class="possitions__item-text">Потрібні кошти на лікування Шаріка<br>Притулок Амеда</span>
-                  <span class="possitions__item-text-additional">сума необмежена</span>
+                  <img class="positions__item-img" src="img/positions-img-3.jpg" alt="position image">
+                  <span class="positions__item-text">Потрібні кошти на лікування Шаріка<br>Притулок Амеда</span>
+                  <span class="positions__item-text-additional">сума необмежена</span>
                   <a class="positions__item-anchor" href="#">Допомогти</a>
+                  <a class="positions__item-info">info</a>
               </div>
               <div class="positions__item">
-                  <img class="positions__item-img" src="" alt="position image">
-                  <span class="possitions__item-text">Допоможіть Мурчику на потез задньої лапи<br>Притулок Милосердя</span>
-                  <span class="possitions__item-text-additional">сума необмежена</span>
+                  <img class="positions__item-img" src="img/positions-img-4.jpg" alt="position image">
+                  <span class="positions__item-text">Допоможіть Мурчику на потез задньої лапи<br>Притулок Милосердя</span>
+                  <span class="positions__item-text-additional">сума необмежена</span>
                   <a class="positions__item-anchor" href="#">Допомогти</a>
+                  <a class="positions__item-info">info</a>
               </div>
               <div class="positions__item">
-                  <img class="positions__item-img" src="" alt="position image">
-                  <span class="possitions__item-text">Збираємо кошти для благоустрою м. Київ<br> Грамадська ініціатива</span>
-                  <span class="possitions__item-text-additional">сума необмежена</span>
+                  <img class="positions__item-img" src="img/positions-img-5.jpg" alt="position image">
+                  <span class="positions__item-text">Збираємо кошти для благоустрою м. Київ<br> Грамадська ініціатива</span>
+                  <span class="positions__item-text-additional">сума необмежена</span>
                   <a class="positions__item-anchor" href="#">Допомогти</a>
+                  <a class="positions__item-info">info</a>
               </div>
               <div class="positions__item">
-                  <img class="positions__item-img" src="" alt="position image">
-                  <span class="possitions__item-text">Збираємо на харчування собак<br>Притулок Хвости і лапи</span>
-                  <span class="possitions__item-text-additional">сума необмежена</span>
+                  <img class="positions__item-img" src="img/positions-img-6.jpg" alt="position image">
+                  <span class="positions__item-text">Збираємо на харчування собак<br>Притулок Хвости і лапи</span>
+                  <span class="positions__item-text-additional">сума необмежена</span>
                   <a class="positions__item-anchor" href="#">Допомогти</a>
+                  <a class="positions__item-info">info</a>
               </div>
           </div>
       </section>
