beside - till 768px ready

--- a/beside/index.html
+++ b/beside/index.html
@@ -144,7 +144,7 @@
                           <span class="shelter-filter__form-custom-checkbox"></span>
                           <span class="shelter-filter__form-text">милосердя</span>
                       </label>
-                       <label class="shelter-filter__form-label">
+                       <label class="shelter-filter__form-label shelter-filter__form-label_long">
                           <input type="checkbox" checked>
                           <span class="shelter-filter__form-custom-checkbox"></span>
                           <span class="shelter-filter__form-text">громадська ініциатива</span>
@@ -239,31 +239,31 @@
 <a class="event__text-highlight" href="goo.gl/cYzT3Y">goo.gl/cYzT3Y</a>
                   </p>
               </div>
-              <div class="event__slider-container">
-                  <div class="event-slider">
-                      <ul class="event-slider__list">
-                          <span class="event-slider__item-target" id="event-target-1"></span>
-                          <span class="event-slider__item-target" id="event-target-2"></span>
-                          <li class="event-slider__item event-slider__item_first">
-                              <div class="event-slider__item-img">
-                                  <img src="img/event-slider__img-1.jpg" alt="image for slider">
-                              </div>
-                              <a class="event-slider__prev" href="#event-target-2">prev</a>
-                              <a class="event-slider__next" href="#event-target-2">next</a>
-                          </li>
-                          <li class="event-slider__item event-slider__item_second">
-                              <div class="event-slider__item-img">
-                                  <img src="img/event-slider__img-2.jpg" alt="image for slider">
-                              </div>
-                              <a class="event-slider__prev" href="#event-target-1">prev</a>
-                              <a class="event-slider__next" href="#event-target-1">next</a>
-                          </li>
-                      </ul>
-                  </div>
+          </section>
+          <div class="event__slider-container">
+              <div class="event-slider">
+                  <ul class="event-slider__list">
+                      <span class="event-slider__item-target" id="event-target-1"></span>
+                      <span class="event-slider__item-target" id="event-target-2"></span>
+                      <li class="event-slider__item event-slider__item_first">
+                          <div class="event-slider__item-img">
+                              <img src="img/event-slider__img-1.jpg" alt="image for slider">
+                          </div>
+                          <a class="event-slider__prev" href="#event-target-2">prev</a>
+                          <a class="event-slider__next" href="#event-target-2">next</a>
+                      </li>
+                      <li class="event-slider__item event-slider__item_second">
+                          <div class="event-slider__item-img">
+                              <img src="img/event-slider__img-2.jpg" alt="image for slider">
+                          </div>
+                          <a class="event-slider__prev" href="#event-target-1">prev</a>
+                          <a class="event-slider__next" href="#event-target-1">next</a>
+                      </li>
+                  </ul>
               </div>
               <p class="event__slider-text">сума необмежена</p>
               <a class="event__slider-anchor" href="#">допомогти</a>
-          </section>
+          </div>
 
           <section class="event__contacts">
               <h3 class="event__contacts-header">
