beside - add desktop-main-nav, start 1024px-version

--- a/beside/index.html
+++ b/beside/index.html
@@ -33,17 +33,20 @@
 <!--                    <button class="nav-toggler" type="button">toggler</button>-->
                 </div>
 
-<!--
+
                 <nav class="main-nav">
                     <ul class="main-nav__list">
-                        <li><a class="main-nav__list-item" href="#">Поле пошука</a></li>
+                        <li>
+                            <input class="main-nav__input-search" type="search" placeholder="назва проекта">
+                            <!-- <a class="main-nav__list-item" href="#">Поле пошука</a> -->
+                        </li>
                         <li><a class="main-nav__list-item" href="#">волонтерство</a></li>
                         <li><a class="main-nav__list-item" href="#">підбір проекта</a></li>
                         <li><a class="main-nav__list-item" href="#">стан проекта</a></li>
                         <li><a class="main-nav__list-item" href="#">новини</a></li>
                     </ul>
                 </nav>
--->
+
             </div>
 
             <div class="login-form">
