beside - html-validator errors fix

--- a/beside/index.html
+++ b/beside/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="lib/normalize.css">
     <link rel="stylesheet" href="build/css/style.min.css">
-    <title></title>
+    <title>Поряд - НАЙБІЛЬША В УКРАЇНІ БІРЖА ДОБРА</title>
   </head>
   <body>
 
@@ -272,7 +272,7 @@
               <h3 class="event__contacts-header">
                   <span>КОНТАКТИ</span> Притулок Сіріус</h3>
               <span>тел:</span>
-              <a class="event__contacts-phone" href="067 123 45 67">067 123 45 67</a>
+              <a class="event__contacts-phone" href="tel:0671234567">067 123 45 67</a>
               <div class="event__contacts-socials">
                   <a href="#">facebook</a>
                   <a href="#">vkontakte</a>
@@ -322,7 +322,7 @@
 
           <section class="question">
               <h4 class="question__header">З ПИТАНЬ РОЗМІЩЕННЯ ПРОЕКТІВ ЗАПОВНІТЬ ФОРМУ</h4>
-              <form class="question__form" method="">
+              <form class="question__form" method="post">
               <button class="question__form-submit" type="submit">Відправити</button>
                   <label class="question__form-input">
                     <input type="text" placeholder="І'мя">
@@ -334,7 +334,7 @@
                     <input type="email" placeholder="E-mail">
                   </label>
                    <label class="question__form-input">
-                       <textarea type="text" placeholder="Текст"></textarea>
+                       <textarea placeholder="Текст"></textarea>
                   </label>
               </form>
               <p class="question__text">Всі поля заповняти обов’язково</p>
@@ -342,7 +342,7 @@
 
           <section class="contacts">
               <h5 class="contacts__phone-heading">ТЕЛЕФОН</h5>
-              <a class="contacts__phone" href="063 456 78 90">063 456 78 90</a>
+              <a class="contacts__phone" href="tel:0634567890">063 456 78 90</a>
 
               <h5 class="contacts__email-heading">E-mail</h5>
               <a class="contacts__email" href="mailto:info@porjad.gmail.com">info@porjad.gmail.com</a>
