beside - rewrite mob main-nav

--- a/beside/index.html
+++ b/beside/index.html
@@ -17,37 +17,33 @@
 
             <div class="page-header__nav-wrapper">
 
-                <div class="page-header__nav-toggler-wrapper">
+                <!-- <div class="page-header__nav-toggler-wrapper"> -->
                     <input class="nav-toggler" type="checkbox" id="toggler">
-                    <label class="nav-toggler__container" for="toggler">
+                    <label class="nav-toggler__label" for="toggler">
                         <span class="nav-toggler__button nav-toggler__button_cross"></span>
                     </label>
 
-                    <nav class="nav">
-                        <a class="nav-item" href="">Dashboard</a>
-                        <a class="nav-item" href="">History</a>
-                        <a class="nav-item" href="">Statistics</a>
-                        <a class="nav-item" href="">Settings</a>
-                    </nav>
 
-<!--                    <button class="nav-toggler" type="button">toggler</button>-->
+                    <nav class="main-nav">
+                        <ul class="main-nav__list">
+                            <li>
+                                <input class="main-nav__input-search" type="search" placeholder="назва проекта">
+                            </li>
+                            <li><a class="main-nav__list-item" href="#">волонтерство</a></li>
+                            <li><a class="main-nav__list-item" href="#">підбір проекта</a></li>
+                            <li><a class="main-nav__list-item" href="#">стан проекта</a></li>
+                            <li><a class="main-nav__list-item" href="#">новини</a></li>
+                        </ul>
+                    </nav>
                 </div>
 
-
-                <nav class="main-nav">
-                    <ul class="main-nav__list">
-                        <li>
-                            <input class="main-nav__input-search" type="search" placeholder="назва проекта">
-                            <!-- <a class="main-nav__list-item" href="#">Поле пошука</a> -->
-                        </li>
-                        <li><a class="main-nav__list-item" href="#">волонтерство</a></li>
-                        <li><a class="main-nav__list-item" href="#">підбір проекта</a></li>
-                        <li><a class="main-nav__list-item" href="#">стан проекта</a></li>
-                        <li><a class="main-nav__list-item" href="#">новини</a></li>
-                    </ul>
-                </nav>
-
-            </div>
+                <!-- <nav class="nav">
+                <a class="nav-item" href="">Dashboard</a>
+                <a class="nav-item" href="">History</a>
+                <a class="nav-item" href="">Statistics</a>
+                <a class="nav-item" href="">Settings</a>
+            </nav> -->
+            <!-- </div> -->
 
             <div class="login-form">
 <!--         how to make heart? what is it?      -->
