start creating components with counter

--- a/angular1.x/bookmarks/app/index.html
+++ b/angular1.x/bookmarks/app/index.html
@@ -21,6 +21,7 @@
     <total-items tablets="ctrl.tablets"></total-items>
     <br>
     <counter ng-model="counterInput"></counter>
+    <aws-counter></aws-counter>
   </main>
   <footer>
   </footer>
@@ -29,5 +30,6 @@
   <script src="js/controllers/ctrl.js"></script>
   <script src="js/directives/totalItems.js"></script>
   <script src="js/directives/counter.js"></script>
+  <script src="js/components/counter-component.js"></script>
   </body>
 </html>
