--- a/angular1.x/booky/index.html
+++ b/angular1.x/booky/index.html
@@ -22,9 +22,9 @@
                     </ul>
                 </div>
                 <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-                    <div ng-repeat="bookmark in bookmarks | filter:{category:currentCategory.name}">
-                        <button type="button" class="close">&times;</button>
-                        <button type="button" class="btn btn-link" ng-click="startEditing()"><span class="glyphicon glyphicon-pencil"></span>
+                    <div ng-repeat="bookmark in bookmarks | filter:{category:currentCategory.name}" ng-class="{'active' : isSelectedBookmark(bookmark.id)}">
+                        <button type="button" class="close" ng-click="deleteBookmark(bookmark)">&times;</button>
+                        <button type="button" class="btn btn-link" ng-click="startEditing(); setEditedBookmark(bookmark);"><span class="glyphicon glyphicon-pencil"></span>
                         </button>
                         <a href="{{bookmark.url}}" target="_blank">{{bookmark.title}}</a>
                     </div>
@@ -54,14 +54,14 @@
                     <div ng-if="shouldShowEditing()">
                         <h4>Editing {{editedBookmark.title}}</h4>
 
-                        <form class="edit-form" role="form" novalidate>
+                        <form class="edit-form" role="form" novalidate ng-submit="updateBookmark(editedBookmark)">
                             <div class="form-group">
                                 <label>Bookmark Title</label>
-                                <input type="text" class="form-control" placeholder="Enter title">
+                                <input type="text" class="form-control" placeholder="Enter title" ng-model="editedBookmark.title">
                             </div>
                             <div class="form-group">
                                 <label>Bookmark URL</label>
-                                <input type="text" class="form-control" placeholder="Enter URL">
+                                <input type="text" class="form-control" placeholder="Enter URL" ng-model="editedBookmark.url">
                             </div>
                             <button type="submit" class="btn btn-info btn-lg">Save</button>
                             <button type="button" class="btn btn-default btn-lg pull-right" ng-click="cancelEditing()">Cancel</button>
