--- a/angular1.x/booky/index.html
+++ b/angular1.x/booky/index.html
@@ -9,12 +9,11 @@
 
     </head>
     <body ng-controller="MainCtrl">
-        <div class="container-fluid" ui-view>
-            
-        </div>
+
+        <div class="container-fluid" ng-view></div>
 
         <script src="vendor/angular.min.js"></script>
-        <script src="vendor/angular-ui-router.min.js"></script>
+        <script src="vendor/angular-route.js"></script>
 
         <script src="app/index.js"></script>
         
