--- a/angular1.x/booky/index.html
+++ b/angular1.x/booky/index.html
@@ -10,10 +10,20 @@
     </head>
     <body ng-controller="MainCtrl">
 
-        <div class="container-fluid" ng-view></div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-3 col-md-2 sidebar" ng-view="categories">
+
+                </div>
+                <!--<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view="bookmarks">-->
+
+                <!--</div>-->
+            </div>
+        </div>
 
         <script src="vendor/angular.min.js"></script>
         <script src="vendor/angular-route.js"></script>
+        <script src="vendor/angular-ui-router.js"></script>
 
         <script src="app/index.js"></script>
         
@@ -21,6 +31,7 @@
         <script src="app/categories/bookmarks/bookmarks.js"></script>
         <script src="app/categories/bookmarks/create/bookmark-create.js"></script>
         <script src="app/categories/bookmarks/edit/bookmark-edit.js"></script>
+
         <script src="app/common/models/bookmarks-model.js"></script>
         <script src="app/common/models/categories-model.js"></script>
     </body>
