create two separeted views on same page with ui-router

--- a/angular1.x/booky/index.html
+++ b/angular1.x/booky/index.html
@@ -11,13 +11,13 @@
     <body ng-controller="MainCtrl">
 
         <div class="container-fluid">
-            <div class="row" ui-view="">
-                <!--<div class="col-sm-3 col-md-2 sidebar" ng-view="categories">-->
+            <div class="row">
+                <div class="col-sm-3 col-md-2 sidebar" ui-view="categories">
 
-                <!--</div>-->
-                <!--<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ng-view="bookmarks">-->
+                </div>
+                <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main" ui-view="bookmarks">
 
-                <!--</div>-->
+                </div>
             </div>
         </div>
 
