refactor to separete edit and create parts of app to own templates and controllers

--- a/angular1.x/booky/index.html
+++ b/angular1.x/booky/index.html
@@ -8,7 +8,7 @@
         <title>Eggly</title>
 
     </head>
-    <body ng-controller="MainCtrl">
+    <body>
 
         <div class="container-fluid">
             <div class="row">
@@ -20,6 +20,7 @@
                 </div>
             </div>
         </div>
+        <script src="vendor/underscore-min.js"></script>
 
         <script src="vendor/angular.min.js"></script>
         <script src="vendor/angular-ui-router.js"></script>
