add ng-animate and animated transitions between state-transitions

--- a/angular1.x/booky/index.html
+++ b/angular1.x/booky/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="vendor/bootstrap.min.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/animations.css">
         <title>Eggly</title>
 
     </head>
@@ -24,6 +25,7 @@
 
         <script src="vendor/angular.min.js"></script>
         <script src="vendor/angular-ui-router.js"></script>
+        <script src="vendor/angular-animate.js"></script>
 
         <script src="app/index.js"></script>
         
