add server with express to host project, start investigation of postcss-loading with webpack

--- a/webpack-study/index.html
+++ b/webpack-study/index.html
@@ -6,7 +6,21 @@
     <title></title>
   </head>
   <body>
-  <header></header>
+  <header class="header">
+    <nav class="nav">
+      <ul class="nav-list">
+        <li class="nav-list__item nav-list__item_first">
+          <a>some 1</a>
+        </li>
+        <li class="nav-list__item nav-list__item_second">
+          <a>some 2</a>
+        </li>
+        <li class="nav-list__item nav-list__item_third">
+          <a>some 3</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
   <main></main>
   <footer>
   </footer>
