--- a/some/src/index.html
+++ b/some/src/index.html
@@ -7,6 +7,7 @@
   <base href="/">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--<script src="/node_modules/toastr/build/toastr.min.js"></script>-->
 </head>
 <body class="container">
   <app-root></app-root>
