--- a/rx-study/index.html
+++ b/rx-study/index.html
@@ -1,9 +1,19 @@
 <html>
     <head>
         <title>RxJs</title>
+        <style>
+            #circle {
+                width: 20px;
+                height: 20px;
+                border-radius: 50%;
+                background-color: red;
+                position: absolute;
+            }
+        </style>
     </head>
     <body>
-        <div>Hello</div>
+        <button type="button" id="btn">Get Movies</button>
+        <div id="output"></div>
         <script src="app.js"></script>
     </body>
 </html>
