--- a/todo-electron/index.html
+++ b/todo-electron/index.html
@@ -9,5 +9,15 @@
     We are using node <script>document.write(process.versions.node)</script>,
     Chrome <script>document.write(process.versions.chrome)</script>,
     and Electron <script>document.write(process.versions.electron)</script>.
+
+    <div>
+        <input type="text" placeholder="enter todo" id="input">
+        <button type="button" id="btn">Save</button>
+    </div>
+    <div>
+        <ul class="list">
+        </ul>
+    </div>
+    <script src="todo.js"></script>
   </body>
 </html>
